--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,10 @@
             xmlHttp.open('GET', url, true);  // true for asynchronous
             xmlHttp.send(null);
         }
+
+        httpGetAsync('http://localhost:9527/stores', function(response){
+            console.log(response);
+        })
     </script>
 </head>
 <body>
